Flashing, progress bar, theme changes - through SDL3